--- a/Exercicio02.ipynb
+++ b/Exercicio02.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJCRwEKdjLpsC2mR/fcCJ7",
+      "authorship_tag": "ABX9TyPoORKf4fWYuZUNXD/mI4hC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,102 +29,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 1) Intervalo de Confiança (95%) para a média populacional do valor da renda per capita (variável \"VL_RENDA_PERCAPITA\")\n",
+        " Utilizando o dataset “dados_exercicios_FIES”, calcule e interprete o seguinte:\n",
         "\n",
-        "Para calcular o intervalo de confiança para a média populacional, a fórmula geral é:\n",
-        "$IC(\\mu) = \\overline{X} \\pm Z_{\\alpha/2} \\cdot \\frac{\\sigma}{\\sqrt{n}}$ se o desvio padrão populacional $\\sigma$ for conhecido.\n",
-        "$IC(\\mu) = \\overline{X} \\pm t_{\\alpha/2, n-1} \\cdot \\frac{s}{\\sqrt{n}}$ se o desvio padrão populacional $\\sigma$ for desconhecido.\n",
+        "1) Intervalo de confiança (95%) para a média populacional do valor do renda percapita (variável “VL_RENDA_PERCAPITA”);\n",
         "\n",
-        "Como o desvio padrão populacional ($\\sigma$) não é conhecido, utilizarei a distribuição t de Student, que converge para a distribuição normal quando o tamanho da amostra (n) é grande.\n",
+        "2) Intervalo de confiança (90%) para a proporção populacional de estudantes em situação de inadimplência (variável “ST_INADIMPLENCIA”)\n",
         "\n",
-        "**Passos para o cálculo:**\n",
+        "3) Qual deve ser o tamanho da amostra ( n ) para que o erro no primeiro itervalo seja de apenas R$ 50 para mais ou para menos?\n",
         "\n",
-        "1.  **Obter os dados da amostra:** A variável de interesse é \"VL_RENDA_PERCAPITA\". Precisarei calcular a média amostral ($\\overline{X}$), o desvio padrão amostral ($s$) e o tamanho da amostra ($n$) a partir do arquivo `dados_exercicio_FIES.csv`.\n",
-        "2.  **Definir o nível de confiança:** O problema solicita um nível de confiança de 95%.\n",
-        "3.  **Encontrar o valor crítico t:** Para um IC de 95%, $\\alpha = 0.05$. O valor crítico $t_{\\alpha/2, n-1}$ será $t_{0.025, n-1}$. Com base no arquivo fornecido, há 100 observações no conjunto de dados, então $n=100$. Os graus de liberdade são $gl = n-1 = 99$.\n",
-        "4.  **Calcular o erro padrão:** O erro padrão da média é $\\frac{s}{\\sqrt{n}}$.\n",
-        "5.  **Calcular a margem de erro:** A margem de erro (ME) é $t_{0.025, n-1} \\cdot \\frac{s}{\\sqrt{n}}$.\n",
-        "6. ]**Construir o intervalo de confiança:** O IC é calculado como $\\overline{X} \\pm ME$.\n",
-        "\n",
-        "**Cálculos (baseados no dataset fornecido):**\n",
-        "\n",
-        "* Tamanho da amostra ($n$): 100\n",
-        "* Média amostral ($\\overline{X}$) da `VL_RENDA_PERCAPITA`: R$ 785.45\n",
-        "* Desvio padrão amostral ($s$) da `VL_RENDA_PERCAPITA`: R$ 565.46\n",
-        "* Nível de confiança: 95%, então $\\alpha = 0.05$ e $\\alpha/2 = 0.025$.\n",
-        "* Graus de liberdade ($gl$): $n-1 = 100-1 = 99$.\n",
-        "* Valor crítico $t_{0.025, 99}$: Consultando uma tabela t ou usando uma função estatística, o valor é aproximadamente 1.984.\n",
-        "* Erro padrão: $\\frac{565.46}{\\sqrt{100}} = \\frac{565.46}{10} = 56.546$.\n",
-        "* Margem de erro: $1.984 \\cdot 56.546 \\approx 112.18$.\n",
-        "* Intervalo de Confiança: $785.45 \\pm 112.18 \\implies [673.27, 897.63]$.\n",
-        "\n",
-        "**Interpretação:**\n",
-        "\n",
-        "Com 95% de confiança, a verdadeira média populacional da renda per capita está entre R$ 673,27 e R$ 897,63.Isso significa que, se o processo de amostragem e cálculo do intervalo fosse repetido muitas vezes, 95% dos intervalos construídos conteriam o verdadeiro valor da média populacional.\n",
-        "\n",
-        "---\n",
-        "\n",
-        "### 2) Intervalo de Confiança (90%) para a proporção populacional de estudantes em situação de inadimplência (variável \"ST_INADIMPLENCIA\")\n",
-        "\n",
-        "Para calcular o intervalo de confiança para uma proporção populacional, a fórmula geral, usando a aproximação normal para n grande, é:\n",
-        "$IC(p) = \\hat{p} \\pm Z_{\\alpha/2} \\cdot \\sqrt{\\frac{\\hat{p}(1-\\hat{p})}{n}}$.\n",
-        "\n",
-        "**Passos para o cálculo:**\n",
-        "\n",
-        "1.  **Obter os dados da amostra:** A variável de interesse é \"ST_INADIMPLENCIA\", que é binária (S ou N). Precisarei calcular a proporção amostral de inadimplentes ($\\hat{p}$) e o tamanho da amostra ($n$).\n",
-        "2.  **Definir o nível de confiança:** O problema solicita um nível de confiança de 90%.\n",
-        "3.  **Encontrar o valor crítico Z:** Para um IC de 90%, $\\alpha=0.10$. O valor crítico $Z_{\\alpha/2}$ será $Z_{0.05}$.\n",
-        "4.  **Calcular o erro padrão:** O erro padrão da proporção é $\\sqrt{\\frac{\\hat{p}(1-\\hat{p})}{n}}$.\n",
-        "5.  **Calcular a margem de erro:** A margem de erro (ME) é $Z_{0.05} \\cdot \\sqrt{\\frac{\\hat{p}(1-\\hat{p})}{n}}$.\n",
-        "6.  [cite_start]**Construir o intervalo de confiança:** O IC é calculado como $\\hat{p} \\pm ME$.\n",
-        "\n",
-        "**Cálculos (baseados no dataset fornecido):**\n",
-        "\n",
-        "* Tamanho da amostra ($n$): 100\n",
-        "* Número de inadimplentes ($X$): 54 (contagem de 'S' na coluna `ST_INADIMPLENCIA` no arquivo `dados_exercicio_FIES.csv` [cite: 500]).\n",
-        "* Proporção amostral ($\\hat{p}$): $\\frac{54}{100} = 0.54$[cite: 256].\n",
-        "* Nível de confiança: 90%, então $\\alpha=0.10$ e $\\alpha/2=0.05$.\n",
-        "* Valor crítico $Z_{0.05}$: Consultando a tabela de valores críticos da distribuição normal, para 90% de confiança, o valor de $z_{\\alpha/2}$ é 1.645.\n",
-        "* Verificação das condições de validade: $n\\hat{p} = 100 \\cdot 0.54 = 54 \\ge 10$ e $n(1-\\hat{p}) = 100 \\cdot (1-0.54) = 46 \\ge 10$. As condições são satisfeitas.\n",
-        "* Erro padrão: $\\sqrt{\\frac{0.54 \\cdot (1-0.54)}{100}} = \\sqrt{\\frac{0.54 \\cdot 0.46}{100}} = \\sqrt{\\frac{0.2484}{100}} = \\sqrt{0.002484} \\approx 0.0498$.\n",
-        "* Margem de erro: $1.645 \\cdot 0.0498 \\approx 0.0819$.\n",
-        "* Intervalo de Confiança: $0.54 \\pm 0.0819 \\implies [0.4581, 0.6219]$.\n",
-        "\n",
-        "**Interpretação:**\n",
-        "\n",
-        "Com 90% de confiança, a proporção populacional de estudantes inadimplentes está entre 45.81% e 62.19%.\n",
-        "\n",
-        "---\n",
-        "\n",
-        "### 3) Qual deve ser o tamanho da amostra (n) para que o erro no primeiro intervalo seja de apenas R$ 50 para mais ou para menos?\n",
-        "\n",
-        "O problema solicita o novo tamanho da amostra ($n$) necessário para atingir uma margem de erro ($E$) de R$ 50, mantendo o nível de confiança de 95% para a média da renda per capita.\n",
-        "\n",
-        "A fórmula para determinar o tamanho da amostra para uma média, dado um erro e uma confiança, é:\n",
-        "$n = \\left(\\frac{Z_{\\alpha/2} \\cdot \\sigma}{E}\\right)^2$.\n",
-        "\n",
-        "Como o desvio padrão populacional $\\sigma$ não é conhecido, usarei o desvio padrão amostral ($s$) da questão 1 como uma estimativa de $\\sigma$.\n",
-        "\n",
-        "**Passos para o cálculo:**\n",
-        "\n",
-        "**Definir a margem de erro desejada ($E$):** R$ 50\n",
-        "\n",
-        "**Obter o nível de confiança:** O problema se refere ao primeiro intervalo, que tem 95% de confiança.\n",
-        "\n",
-        "**Encontrar o valor crítico Z:** Para 95% de confiança, $\\alpha=0.05$ e o valor crítico $Z_{0.025}$ é 1.960.\n",
-        "\n",
-        "**Usar a estimativa para o desvio padrão populacional ($\\sigma$):** Utilizarei o desvio padrão amostral $s$ de R$ 565.46, calculado na questão 1.\n",
-        "\n",
-        "**Calcular o tamanho da amostra ($n$):** A fórmula é $n = \\left(\\frac{1.96 \\cdot 565.46}{50}\\right)^2$.\n",
-        "\n",
-        "**Cálculos:**\n",
-        "\n",
-        "* $Z_{0.025} = 1.96$\n",
-        "* $\\sigma \\approx s = 565.46$\n",
-        "* $E = 50$\n",
-        "* $n = \\left(\\frac{1.96 \\cdot 565.46}{50}\\right)^2 = \\left(\\frac{1108.30}{50}\\right)^2 = (22.166)^2 \\approx 491.33$.\n",
-        "\n",
-        "Arredondando para o próximo número inteiro, o tamanho da amostra deve ser de **492**."
+        "A resolução foi realizada utilizando python, conforme código abaixo:\n"
       ],
       "metadata": {
         "id": "bqyAfRlgwABk"
@@ -132,9 +45,185 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from scipy import stats\n",
+        "from statsmodels.stats import proportion\n",
+        "\n",
+        "# Set a wider display for columns\n",
+        "pd.set_option('display.max_columns', None)\n",
+        "\n",
+        "# CArregando o dataset\n",
+        "df = pd.read_csv('dados_exercicio_FIES.csv', sep=';', decimal=',')\n",
+        "\n",
+        "# Limpando as colunas\n",
+        "df.columns = df.columns.str.strip()\n",
+        "\n",
+        "# Mostrando as informações do dataframe para verificar o carregamento\n",
+        "print(\"Initial DataFrame Info:\")\n",
+        "df.info()\n",
+        "\n",
+        "# --- 1) IC 95% para a média de VL_RENDA_PERCAPITA ---\n",
+        "print(\"\\n--- 1) Intervalo de Confiança (95%) para a média da Renda Per Capita ---\")\n",
+        "\n",
+        "# Obter os dados relevantes\n",
+        "renda_percapita = df['VL_RENDA_PERCAPITA']\n",
+        "n = len(renda_percapita)\n",
+        "media_amostral = renda_percapita.mean()\n",
+        "desvio_padrao_amostral = renda_percapita.std(ddof=1) # ddof=1 for sample standard deviation\n",
+        "\n",
+        "# Definir nível de confiança e graus de liberdade\n",
+        "confianca = 0.95\n",
+        "gl = n - 1\n",
+        "\n",
+        "# Calcular o valor t crítico\n",
+        "t_critico = stats.t.ppf(1 - (1-confianca)/2, gl)\n",
+        "\n",
+        "# Calcular o erro padrão e a margem de erro\n",
+        "erro_padrao_media = desvio_padrao_amostral / np.sqrt(n)\n",
+        "margem_erro_media = t_critico * erro_padrao_media\n",
+        "\n",
+        "# Calcular o intervalo de confiança\n",
+        "ic_inferior_media = media_amostral - margem_erro_media\n",
+        "ic_superior_media = media_amostral + margem_erro_media\n",
+        "\n",
+        "print(f\"Tamanho da amostra (n): {n}\")\n",
+        "print(f\"Média amostral: R$ {media_amostral:.2f}\")\n",
+        "print(f\"Desvio padrão amostral: R$ {desvio_padrao_amostral:.2f}\")\n",
+        "print(f\"Valor t-crítico ({confianca*100:.0f}%): {t_critico:.3f}\")\n",
+        "print(f\"Margem de erro: R$ {margem_erro_media:.2f}\")\n",
+        "print(f\"IC 95%: ({ic_inferior_media:.2f}, {ic_superior_media:.2f})\")\n",
+        "\n",
+        "# --- 2) IC 90% para a proporção de inadimplência ---\n",
+        "print(\"\\n--- 2) Intervalo de Confiança (90%) para a proporção de inadimplência ---\")\n",
+        "\n",
+        "# Obter os dados relevantes\n",
+        "inadimplencia = df['ST_INADIMPLENCIA']\n",
+        "n_inadimplencia = len(inadimplencia)\n",
+        "sucessos = (inadimplencia == 'S').sum()\n",
+        "p_hat = sucessos / n_inadimplencia\n",
+        "\n",
+        "# Definir o nivel de confiança\n",
+        "confianca_prop = 0.90\n",
+        "alpha = 1 - confianca_prop\n",
+        "\n",
+        "# Usando a aproximação normal\n",
+        "\n",
+        "# Checando as condições\n",
+        "print(f\"Verificando as condições de aproximação normal:\")\n",
+        "print(f\"n * p_hat = {n_inadimplencia} * {p_hat} = {n_inadimplencia * p_hat} >= 10\")\n",
+        "print(f\"n * (1-p_hat) = {n_inadimplencia} * {1-p_hat} = {n_inadimplencia * (1-p_hat)} >= 10\")\n",
+        "\n",
+        "# Calcular o valor z crítico\n",
+        "z_critico = stats.norm.ppf(1 - alpha/2)\n",
+        "\n",
+        "# Calcular o erro padrão e a margem de erro\n",
+        "erro_padrao_prop = np.sqrt(p_hat * (1 - p_hat) / n_inadimplencia)\n",
+        "margem_erro_prop = z_critico * erro_padrao_prop\n",
+        "\n",
+        "# Calcule o intervalo de confiança usando a fórmula\n",
+        "ic_inferior_prop = p_hat - margem_erro_prop\n",
+        "ic_superior_prop = p_hat + margem_erro_prop\n",
+        "\n",
+        "print(f\"Tamanho da amostra (n): {n_inadimplencia}\")\n",
+        "print(f\"Número de inadimplentes: {sucessos}\")\n",
+        "print(f\"Proporção amostral (p_hat): {p_hat:.2f}\")\n",
+        "print(f\"Valor z-crítico ({confianca_prop*100:.0f}%): {z_critico:.3f}\")\n",
+        "print(f\"Margem de erro: {margem_erro_prop:.4f}\")\n",
+        "print(f\"IC 90%: ({ic_inferior_prop:.3f}, {ic_superior_prop:.3f})\")\n",
+        "\n",
+        "# Alternativa usando statsmodels, para verificação\n",
+        "ic_statsmodels = proportion.proportion_confint(sucessos, n_inadimplencia, alpha=alpha, method='normal')\n",
+        "print(f\"IC 90% (statsmodels): ({ic_statsmodels[0]:.3f}, {ic_statsmodels[1]:.3f})\")\n",
+        "\n",
+        "\n",
+        "# --- 3) Tamanho da amostra para erro de R$ 50 na média ---\n",
+        "print(\"\\n--- 3) Tamanho da amostra necessário para erro de R$ 50 ---\")\n",
+        "# E é a margem de erro desejada\n",
+        "E = 50\n",
+        "# z_critico para 95% de confiança (do slide)\n",
+        "z_critico_95 = stats.norm.ppf(1 - (1-0.95)/2)\n",
+        "# Usar o desvio padrão amostral como estimativa para sigma\n",
+        "sigma_est = desvio_padrao_amostral\n",
+        "\n",
+        "# Calcular o tamanho da amostra\n",
+        "n_necessario = ( (z_critico_95 * sigma_est) / E )**2\n",
+        "\n",
+        "print(f\"Margem de erro desejada (E): R$ {E}\")\n",
+        "print(f\"Desvio padrão estimado (sigma): R$ {sigma_est:.2f}\")\n",
+        "print(f\"Tamanho da amostra necessário (n): {n_necessario:.2f} (arredondando para cima: {np.ceil(n_necessario):.0f})\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hJ56yvbhwb20",
+        "outputId": "1ff936fb-49d1-45ab-d567-a4a77c876ccc"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Initial DataFrame Info:\n",
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 150 entries, 0 to 149\n",
+            "Data columns (total 15 columns):\n",
+            " #   Column                          Non-Null Count  Dtype  \n",
+            "---  ------                          --------------  -----  \n",
+            " 0   id                              150 non-null    int64  \n",
+            " 1   SG_SEXO                         150 non-null    object \n",
+            " 2   NU_IDADE                        150 non-null    int64  \n",
+            " 3   DS_RACA_COR                     150 non-null    object \n",
+            " 4   SG_UF                           150 non-null    object \n",
+            " 5   DS_ESTADO_CIVIL                 150 non-null    object \n",
+            " 6   ST_DEFICIENCIA                  150 non-null    object \n",
+            " 7   ST_ENSINO_MEDIO_ESCOLA_PUBLICA  150 non-null    object \n",
+            " 8   ST_BOLSISTA_PROUNI              150 non-null    object \n",
+            " 9   VL_RENDA_FAMILIAR_BRUTA_MENSAL  150 non-null    float64\n",
+            " 10  VL_RENDA_PESSOA_BRUTA_MENSAL    150 non-null    float64\n",
+            " 11  VL_RENDA_PERCAPITA              150 non-null    float64\n",
+            " 12  NU_SEMESTRE_FINANCIADO          150 non-null    int64  \n",
+            " 13  VL_FINANCIAMENTO                150 non-null    float64\n",
+            " 14  ST_INADIMPLENCIA                150 non-null    object \n",
+            "dtypes: float64(4), int64(3), object(8)\n",
+            "memory usage: 17.7+ KB\n",
+            "\n",
+            "--- 1) Intervalo de Confiança (95%) para a média da Renda Per Capita ---\n",
+            "Tamanho da amostra (n): 150\n",
+            "Média amostral: R$ 774.14\n",
+            "Desvio padrão amostral: R$ 608.81\n",
+            "Valor t-crítico (95%): 1.976\n",
+            "Margem de erro: R$ 98.23\n",
+            "IC 95%: (675.91, 872.36)\n",
+            "\n",
+            "--- 2) Intervalo de Confiança (90%) para a proporção de inadimplência ---\n",
+            "Verificando as condições de aproximação normal:\n",
+            "n * p_hat = 150 * 0.5066666666666667 = 76.0 >= 10\n",
+            "n * (1-p_hat) = 150 * 0.4933333333333333 = 74.0 >= 10\n",
+            "Tamanho da amostra (n): 150\n",
+            "Número de inadimplentes: 76\n",
+            "Proporção amostral (p_hat): 0.51\n",
+            "Valor z-crítico (90%): 1.645\n",
+            "Margem de erro: 0.0671\n",
+            "IC 90%: (0.440, 0.574)\n",
+            "IC 90% (statsmodels): (0.440, 0.574)\n",
+            "\n",
+            "--- 3) Tamanho da amostra necessário para erro de R$ 50 ---\n",
+            "Margem de erro desejada (E): R$ 50\n",
+            "Desvio padrão estimado (sigma): R$ 608.81\n",
+            "Tamanho da amostra necessário (n): 569.54 (arredondando para cima: 570)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "hJ56yvbhwb20"
+        "id": "RUteyilu0PO8"
       },
       "execution_count": null,
       "outputs": []
