--- a/Exercicio02.ipynb
+++ b/Exercicio02.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPoORKf4fWYuZUNXD/mI4hC",
+      "authorship_tag": "ABX9TyMtWYIpTAwWxyoNB4Q6xRTj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,7 @@
         "from scipy import stats\n",
         "from statsmodels.stats import proportion\n",
         "\n",
-        "# Set a wider display for columns\n",
+        "# Definindo uma exibição mais ampla para colunas\n",
         "pd.set_option('display.max_columns', None)\n",
         "\n",
         "# CArregando o dataset\n",
@@ -159,9 +159,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hJ56yvbhwb20",
-        "outputId": "1ff936fb-49d1-45ab-d567-a4a77c876ccc"
+        "outputId": "789c0e98-7f0b-4f40-a8b2-f1fd36b239a7"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
