--- a/Exercício03.ipynb
+++ b/Exercício03.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPIt0Z6cjJIdGocDJdssv29",
+      "authorship_tag": "ABX9TyNK/6LkaRfiAq1abhcTO2HQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,22 +38,34 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Olá, professor.\n",
-        "\n",
+        "# Exercício 03 de Estatística Inferencial"
+      ],
+      "metadata": {
+        "id": "UTL7tAA2Esid"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "A seguir, apresento a resolução do Exercício 03 de Estatística Inferencial.\n",
         "\n",
-        "Raciocínio e Metodologia\n",
+        "**Raciocínio e Metodologia**\n",
+        "\n",
         "O problema nos pede para determinar se um programa de capacitação profissional foi eficaz em aumentar a taxa de emprego de jovens adultos, que era de 45% antes da intervenção. Para isso, temos uma amostra de 200 participantes.\n",
         "\n",
         "\n",
         "A resolução será dividida em duas partes principais, seguindo as tarefas propostas:\n",
         "\n",
         "\n",
-        "Teste de Hipóteses: Para verificar se o programa aumentou significativamente a taxa de emprego, utilizarei um teste de hipóteses para a proporção populacional. Como a pergunta é sobre um aumento, trata-se de um teste unilateral à direita.\n",
+        "**Teste de Hipóteses:**\n",
+        "\n",
+        "Para verificar se o programa aumentou significativamente a taxa de emprego, utilizarei um teste de hipóteses para a proporção populacional. Como a pergunta é sobre um aumento, trata-se de um teste unilateral à direita.\n",
         "\n",
         "\n",
         "\n",
-        "Intervalo de Confiança: Para estimar a nova taxa de emprego real na população de jovens adultos que passaram pelo programa, calcularei um intervalo de confiança de 95% para a proporção. Isso nos dará uma faixa de valores plausíveis para a nova taxa de emprego."
+        "**Intervalo de Confiança:**\n",
+        "\n",
+        "Para estimar a nova taxa de emprego real na população de jovens adultos que passaram pelo programa, calcularei um intervalo de confiança de 95% para a proporção. Isso nos dará uma faixa de valores plausíveis para a nova taxa de emprego."
       ],
       "metadata": {
         "id": "91AoVrLX8xwL"
@@ -65,9 +77,18 @@
         "# Importar as bibliotecas necessárias\n",
         "import pandas as pd\n",
         "from statsmodels.stats.proportion import proportions_ztest, proportion_confint\n",
-        "import numpy as np\n",
-        "\n",
-        "# --- Carregamento ---\n",
+        "import numpy as np\n"
+      ],
+      "metadata": {
+        "id": "vg6Dsj1REkG9"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# --- Carregamento do Dataset ---\n",
         "\n",
         "\n",
         "df = pd.read_csv('programa_social_dataset.csv', sep=',')\n",
@@ -87,9 +108,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JxkKSdZt9FXU",
-        "outputId": "2c9b6ef0-d1c9-4624-8f5a-539ceb545403"
+        "outputId": "a2e2ed1e-c581-4b0f-e43d-9f9644e41497"
       },
-      "execution_count": 8,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,6 +137,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "b8dL_Fh2EjAe"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -194,9 +224,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JS-C7bR7CN4A",
-        "outputId": "7621f793-3b03-4d14-e985-fdd91d528515"
+        "outputId": "b83c8828-4f6b-4592-8ede-5adb0167b3e8"
       },
-      "execution_count": 14,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
